# Doosan_Robotics_m0609_study

./: README.md
src/doosan-robot2/: install_emulator.sh
src/doosan-robot2/.devcontainer/: Dockerfile  devcontainer.json  post-command.sh
src/doosan-robot2/common2/: CMakeLists.txt  package.xml
src/doosan-robot2/common2/imp/: DR_common2.py  DR_init.py  DSR_ROBOT2.py
src/doosan-robot2/common2/include/: DRFC.h  DRFL.h  DRFLEx.h  DRFS.h
src/doosan-robot2/dsr_bringup2/: CHANGELOG.rst  package.xml  setup.cfg  setup.py
src/doosan-robot2/dsr_bringup2/dsr_bringup2/: connection.py  gazebo_connection.py  moveit_connection.py
src/doosan-robot2/dsr_bringup2/launch/: dsr_bringup2_gazebo.launch.py  dsr_bringup2_moveit.launch.py  dsr_bringup2_rviz.launch.py  dsr_bringup2_spawn_on_gazebo.launch.py
src/doosan-robot2/dsr_controller2/: CHANGELOG.rst  CMakeLists.txt  dsr_controller2_plugins.xml  dsr_joint_trajectory_plugin.xml  package.xml
src/doosan-robot2/dsr_controller2/config/: console.conf  dsr_controller2.yaml  dsr_controller2_ex.yaml  dsr_controller2_gz.yaml
src/doosan-robot2/dsr_controller2/include/dsr_controller2/: dsr_controller2.hpp  dsr_joint_trajectory.hpp  visibility_control.h
src/doosan-robot2/dsr_controller2/launch/: dsr_control2.launch.py  dsr_controller2.launch.py  dsr_moveit2.launch.py
src/doosan-robot2/dsr_controller2/src/: dsr_control_node2.cpp  dsr_controller2.cpp  dsr_joint_trajectory.cpp
src/doosan-robot2/dsr_description2/: CMakeLists.txt  dsr_description2_path.dsv.in  package.xml
src/doosan-robot2/dsr_description2/config/: macro.gazebo.xacro
src/doosan-robot2/dsr_description2/launch/: dsr_description.launch.py
src/doosan-robot2/dsr_description2/ros2_control/: a0509.gz_ros2_control.xacro  a0509.ros2_control.xacro  a0912.gz_ros2_control.xacro  a0912.ros2_control.xacro  e0509.gz_ros2_control.xacro  e0509.ros2_control.xacro  h2017.gz_ros2_control.xacro  h2017.ros2_control.xacro  h2515.gz_ros2_control.xacro  h2515.ros2_control.xacro  m0609.gz_ros2_control.xacro  m0609.ros2_control.xacro  m0617.gz_ros2_control.xacro  m0617.ros2_control.xacro  m1013.gz_ros2_control.xacro  m1013.ros2_control.xacro  m1509.gz_ros2_control.xacro  m1509.ros2_control.xacro
src/doosan-robot2/dsr_description2/urdf/: a0509.blue.urdf  a0509.urdf  a0509.white.urdf  a0912.blue.urdf  a0912.urdf  a0912.white.urdf  e0509.urdf  e0509.white.urdf  h2017.blue.urdf  h2017.urdf  h2017.white.urdf  h2515.blue.urdf  h2515.urdf  h2515.white.urdf  m0609.blue.urdf  m0609.urdf  m0609.white.urdf  m0617.blue.urdf  m0617.urdf  m0617.white.urdf  m1013.blue.urdf  m1013.urdf  m1013.white.urdf  m1509.blue.urdf  m1509.urdf  m1509.white.urdf
src/doosan-robot2/dsr_description2/xacro/: a0509.urdf.xacro  a0912.urdf.xacro  e0509.urdf.xacro  h2017.urdf.xacro  h2515.urdf.xacro  m0609.urdf.xacro  m0617.urdf.xacro  m1013.urdf.xacro  m1509.urdf.xacro  macro.a0509.blue.xacro  macro.a0509.white.xacro  macro.a0912.blue.xacro  macro.a0912.white.xacro  macro.e0509.white.xacro  macro.h2017.blue.xacro  macro.h2017.white.xacro  macro.h2515.blue.xacro  macro.h2515.white.xacro  macro.m0609.blue.xacro  macro.m0609.white.xacro  macro.m0617.blue.xacro  macro.m0617.white.xacro  macro.m1013.blue.xacro  macro.m1013.white.xacro  macro.m1509.blue.xacro  macro.m1509.white.xacro
src/doosan-robot2/dsr_example2/example/: README.md  package.xml  setup.py
src/doosan-robot2/dsr_example2/realtime_control/: CMakeLists.txt  README.md  package.xml
src/doosan-robot2/dsr_example2/realtime_control/include/dsr_realtime_control/: realtime_api.hpp  realtime_control.hpp  rt_init.hpp  rt_shutdown.hpp
src/doosan-robot2/dsr_example2/realtime_control/src/: realtime_api.cpp  realtime_control.cpp  rt_init.cpp  rt_shutdown.cpp
src/doosan-robot2/dsr_example2/visualservoing/: README.md  package.xml  setup.cfg  setup.py
src/doosan-robot2/dsr_example2/visualservoing/config/: real_camera.yaml  (+1 more)
src/doosan-robot2/dsr_gazebo2/: package.xml
src/doosan-robot2/dsr_gazebo2/launch/: dsr_gazebo.launch.py  dsr_spawn_on_gazebo.launch.py
src/doosan-robot2/dsr_hardware2/: CMakeLists.txt  dsr_hardware2.xml  package.xml
src/doosan-robot2/dsr_hardware2/include/dsr_hardware2/: dsr_hw_interface2.h
src/doosan-robot2/dsr_hardware2/src/: dsr_hw_interface2.cpp
src/doosan-robot2/dsr_moveit2/a0509_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/doosan-robot2/dsr_moveit2/a0912_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/doosan-robot2/dsr_moveit2/e0509_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/doosan-robot2/dsr_moveit2/h2017_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/doosan-robot2/dsr_moveit2/h2515_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/doosan-robot2/dsr_moveit2/m0609_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/doosan-robot2/dsr_moveit2/m0617_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/doosan-robot2/dsr_moveit2/m1013_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/doosan-robot2/dsr_moveit2/m1509_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/doosan-robot2/dsr_moveit2/m1509_moveit_config/config/: m1509.urdf.xacro
src/doosan-robot2/dsr_moveit2/m1509_moveit_config/launch/: start.launch.py
src/doosan-robot2/dsr_msgs2/: CMakeLists.txt  package.xml
src/doosan-robot2/dsr_rokey/rokey/: package.xml  setup.cfg  setup.py
src/doosan-robot2/dsr_rokey/rokey/rokey/basic/: cup_stacking.py  force_check.py  force_control.py  gear_assembling.drl  get_current_pos.py  getting_position.py  grip.py  jenga.py  jog_complete.py  move.py  move_periodic.py  pattern_pallet.drl  pick_and_place.py  stacking_project.py  stacking_project_final.py  협동로봇2_A-4조_SourceCode.py
src/doosan-robot2/dsr_tests/: package.xml  setup.cfg  setup.py
src/doosan-robot2/dsr_tests/launch/: dsr_bringup_without_spawner_test.launch.py  dsr_spawner_cli_test.launch.py
src/doosan-robot2/dsr_tests/test/: test_cli_dsr_system.py
src/gz_ros2_control/gz_ros2_control_tests/tests/: position_test.py
(+59 files in other folders)
