<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rokey</name>
  <version>0.0.0</version>
  <description>ROKEY BOOT CAMP Package</description>
  <maintainer email="dlacksdn352@gmail.com">sparkx</maintainer>
  <license>Apache 2.0 License</license>

  <depend>rclpy</depend>
  <depend>common2</depend>
  
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
